# cargo-android-sample

./: Cargo.toml  README.md  adb-runner.sh
.cargo/: config
benches/: fib.rs
src/: lib.rs  main.rs
