[package]
name = "cargo-android-sample"
version = "0.1.0"
authors = ["Ryosuke Kamesawa <emak.ryo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "3.0"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.2", features = ["logger"] }
android_logger = "0.9"

[dev-dependencies]
criterion = "0.3"

[lib]
crate-type = ["lib", "cdylib"]

[[bench]]
name = "fib"
harness = false
